--- a/week03_Number BaseBall Game/index.html
+++ b/week03_Number BaseBall Game/index.html
@@ -12,12 +12,14 @@
     <div>
         <from name ="startGame">
             <P>숫자야구게임 START!</P>
-            <input type="submit" id='start' value="start">
+            <a href="#" onclick="init()">
+                <input type="submit" id='start' value="start"?>
+            </a>
         </from>
         <from name ="PlayGame">
-            <input type="number" class="playerNums" id="num1" min=1 max=9>
-            <input type="number" class="playerNums" id="num2" min=1 max=9>
-            <input type="number" class="playerNums" id="num3" min=1 max=9>
+            <input type="number" class="playerNums" id="num1" min=0 max=9>
+            <input type="number" class="playerNums" id="num2" min=0 max=9>
+            <input type="number" class="playerNums" id="num3" min=0 max=9>
             <input type="submit" id='play' value="play">
         </from>
     </div>
